# 2gbenchmark

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml
src/gwbenchmark2g/: __init__.py  __main__.py  cli.py  config.py  io.py  simulate.py
tests/: test_cli.py  test_simulate.py
