[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gwbenchmark2g"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "bilby[gw]==2.7.1",
    "numpy",
    "pyarrow",
    "pydantic",
]
dynamic = ["version"]

[tool.setuptools_scm]

[tool.setuptools.package-dir]
gwbenchmark2g = "src/gwbenchmark2g"

[dependency-groups]
test = ["pytest>7"]
dev = [
    {include-group = "test"},
    "pre-commit",
]
